unify historical and noground analyses

--- a/historical.ipynb
+++ b/historical.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(1, 3, figsize=(10, 5))\n",
+    "fig, axs = plt.subplots(1, 3, figsize=(10, 5), sharey=True, gridspec_kw={'wspace': 0.05})\n",
     "xlabels = {\n",
     "    'rho': r'Difference from true value $[\\mathrm{g/cm^3}]$',\n",
     "    'c': r'Difference from true value $[\\mathrm{km/s}]$',\n",
@@ -114,12 +114,12 @@
     "                label.set_visible(False)\n",
     "        ax.tick_params(axis='both', which='both', direction='in', top=True, right=True)\n",
     "    ax.set_xlabel(xlabels[name])\n",
-    "    ax.set_ylabel('Year')\n",
     "    ax.set_ylim(2000, 1650)\n",
     "    ax.set_title(nice_names[name])\n",
     "    # make top x limit and bottom x limit equal\n",
     "    xlim = max(abs(ax.get_xlim()[0]), abs(ax.get_xlim()[1]))\n",
     "    ax.set_xlim(-xlim, xlim)\n",
+    "axs[0].set_ylabel('Year')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig('figs/historical.pdf', bbox_inches='tight')\n",
@@ -168,22 +168,22 @@
     "datasets['agcl'] = agcl_df\n",
     "datasets['agi'] = agi_df\n",
     "datasets['agbr'] = agbr_df\n",
-    "datasets['no'] = no_df\n",
-    "datasets['co'] = co_df\n",
+    "# datasets['no'] = no_df\n",
+    "# datasets['co'] = co_df\n",
     "\n",
     "truths['agcl'] = clarke_ratio(107.8682, 0.0002, 35.453, 0.004, 100, 0)\n",
     "truths['agbr'] = clarke_ratio(107.8682, 0.0002, 79.904, 0.003, 100, 0)\n",
     "truths['agi'] = clarke_ratio(107.8682, 0.0002, 126.90447, 0.00003, 100, 0)\n",
     "truths['ho'] = clarke_quotient(1.0080, 0.0002, 15.9995, 0.0005)\n",
-    "truths['no'] = clarke_ratio(15.9995, 0.0005, 14.007, 0.001, 16, 0)\n",
-    "truths['co'] = clarke_ratio(15.9995, 0.0005, 12.011, 0.002, 16, 0)\n",
+    "# truths['no'] = clarke_ratio(15.9995, 0.0005, 14.007, 0.001, 16, 0)\n",
+    "# truths['co'] = clarke_ratio(15.9995, 0.0005, 12.011, 0.002, 16, 0)\n",
     "\n",
-    "nice_names['ho'] = 'Oxygen to Hydrogen mass ratio'\n",
-    "nice_names['agcl'] = 'Silver to Chlorine mass ratio'\n",
-    "nice_names['agi'] = 'Silver to Iodine mass ratio'\n",
-    "nice_names['agbr'] = 'Silver to Bromine mass ratio'\n",
-    "nice_names['no'] = 'Nitrogen mass (O=16)'\n",
-    "nice_names['co'] = 'Carbon mass (O=16)'"
+    "nice_names['ho'] = 'O:H mass ratio'\n",
+    "nice_names['agcl'] = 'Ag:Cl mass ratio'\n",
+    "nice_names['agi'] = 'Ag:I mass ratio'\n",
+    "nice_names['agbr'] = 'Ag:Br mass ratio'\n",
+    "# nice_names['no'] = 'N mass (O=16)'\n",
+    "# nice_names['co'] = 'C mass (O=16)'"
    ]
   },
   {
@@ -192,11 +192,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(3, 2, figsize=(8, 5))\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(8, 3))\n",
     "from methods import birge, random_effects_hksj, binomial_method\n",
     "\n",
     "plot_est = False\n",
-    "chemistry_keys = ['ho', 'agcl', 'agi', 'agbr', 'no', 'co']\n",
+    "chemistry_keys = ['ho', 'agcl', 'agi', 'agbr']\n",
     "\n",
     "for i, name in enumerate(chemistry_keys):\n",
     "    ax = axs.flatten()[i]\n",
@@ -256,32 +256,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets['lambda-lifetime'] = pd.read_csv('data/pdg1970/lambda-lifetime.csv', comment='#')\n",
-    "datasets['sigma+-lifetime'] = pd.read_csv('data/pdg1970/sigma+-lifetime.csv', comment='#')\n",
-    "datasets['pion-mass-diff'] = pd.read_csv('data/pdg1970/pion-mass-diff.csv', comment='#')\n",
-    "datasets['charged-kaon-lifetime'] = pd.read_csv('data/pdg1970/charged-kaon-lifetime.csv', comment='#')\n",
-    "datasets['charged-pion-lifetime'] = pd.read_csv('data/pdg1970/charged-pion-lifetime.csv', comment='#')\n",
-    "datasets['eta-mass'] = pd.read_csv('data/pdg1970/eta-mass.csv', comment='#')\n",
-    "\n",
-    "truths['lambda-lifetime'] = (2.617, 0.010)\n",
-    "truths['sigma+-lifetime'] = (0.8018, 0.0026)\n",
-    "truths['pion-mass-diff'] = (4.5936, 0.0005)\n",
-    "truths['charged-kaon-lifetime'] = (1.2380, 0.0020)\n",
-    "truths['charged-pion-lifetime'] = (26.033, 0.005)\n",
-    "truths['eta-mass'] = (547.862, 0.017)\n",
-    "\n",
-    "nice_names['lambda-lifetime'] = r'$\\Lambda$ mean lifetime $\\mathrm{[10^{-10}s]}$'\n",
-    "nice_names['sigma+-lifetime'] = r'$\\Sigma^+$ mean lifetime $\\mathrm{[10^{-10}s]}$'\n",
-    "nice_names['pion-mass-diff'] = r'$m_{\\pi^\\pm}-m_{\\pi^0}$ $\\mathrm{[MeV]}$'\n",
-    "nice_names['charged-kaon-lifetime'] = r'$K^\\pm$ mean lifetime $\\mathrm{[10^{-8}s]}$'\n",
-    "nice_names['charged-pion-lifetime'] = r'$\\pi^\\pm$ mean lifetime $\\mathrm{[10^{-9}s]}$'\n",
-    "nice_names['eta-mass'] = r'$\\eta$ mass $\\mathrm{[MeV]}$'\n",
-    "\n",
-    "fig, axs = plt.subplots(3, 2, figsize=(8, 5))\n",
+    "import os\n",
+    "particle_keys = sorted([f.split('.')[0] for f in os.listdir('data/pdg1970') if f.endswith('.csv')])\n",
+    "print(particle_keys)\n",
+    "units = {}\n",
+    "for p in particle_keys:\n",
+    "    path = f'data/pdg1970/{p}.csv'\n",
+    "    datasets[p] = pd.read_csv(path, comment='#')\n",
+    "    with open(path, 'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "        nice_names[p] = lines[0].strip('# ').strip('\\n')\n",
+    "        units[p] = lines[1].strip('# ').strip('\\n')\n",
+    "        value = float(lines[2].split(':')[1].strip())\n",
+    "        sigma = float(lines[3].split(':')[1].strip())\n",
+    "        truths[p] = (value, sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(particle_keys))\n",
+    "fig, axs = plt.subplots(6, 3, figsize=(8, 8))\n",
     "from methods import birge, random_effects_hksj, binomial_method\n",
-    "\n",
+    "assert len(particle_keys) <= len(axs.flatten())\n",
     "plot_est = False\n",
-    "particle_keys = ['lambda-lifetime', 'sigma+-lifetime', 'pion-mass-diff', 'charged-kaon-lifetime', 'charged-pion-lifetime', 'eta-mass']\n",
+    "# particle_keys = ['lambda-lifetime', 'sigma+-lifetime', 'pion-mass-diff', 'charged-kaon-lifetime', 'charged-pion-lifetime', 'eta-mass']\n",
     "\n",
     "for i, name in enumerate(particle_keys):\n",
     "    ax = axs.flatten()[i]\n",
@@ -313,7 +315,7 @@
     "        binomial_upper, _ = binomial_method(values, p=0.5, target=0.15865, which='upper')\n",
     "        ax.axvline(binomial_upper, color='green', linestyle='--', linewidth=1)\n",
     "\n",
-    "    ax.set_title(nice_names[name])\n",
+    "    ax.set_title(f'{nice_names[name]} {units[name]}')\n",
     "\n",
     "    # ax.axvline(truth, color='black', linestyle='--', linewidth=1)\n",
     "    # ax.axvline(truth-err, color='grey', linestyle='--', linewidth=1)\n",
@@ -353,10 +355,19 @@
     "\n",
     "results = {}\n",
     "\n",
+    "def format_number(x):\n",
+    "    if x == -np.inf:\n",
+    "        return r'$\\approx-\\infty$'\n",
+    "    if x == np.inf:\n",
+    "        return r'$\\approx\\infty$'\n",
+    "    if x >= 1e2 or x <= -1e2:\n",
+    "        return f'${str(int(x))}$'\n",
+    "    return r'$\\num{{{0:.2g}}}$'.format(x)\n",
+    "\n",
     "def fmt_result(result):\n",
     "    # result is a list\n",
     "    minmax = [min(result), max(result)]\n",
-    "    result_fmt = [f'{x:.2g}' for x in minmax]\n",
+    "    result_fmt = [format_number(x) for x in minmax]\n",
     "    # get unique values (preserving order)\n",
     "    result_fmt = pd.unique(np.array(result_fmt))\n",
     "    if len(result_fmt) == 1:\n",
@@ -366,7 +377,7 @@
     "\n",
     "for n in names:\n",
     "    results[n] = {}\n",
-    "    results[n]['count'] = len(datasets[n])\n",
+    "    results[n]['count'] = fmt_result([len(datasets[n])])\n",
     "\n",
     "    truth_vals = []\n",
     "    if hasattr(truths[n], '__iter__'):\n",
@@ -388,7 +399,14 @@
     "results_df = pd.DataFrame(results).T\n",
     "results_df.index = [nice_names[n] for n in names]\n",
     "\n",
-    "print(results_df.to_latex(index=True))"
+    "# use np to save latex table with & separator\n",
+    "rows = results_df.values.tolist()\n",
+    "rows = [list(row) for row in rows]\n",
+    "rows = [[nice_names[n]] + rows[i] for i, n in enumerate(names)]\n",
+    "txt = ' \\\\\\\\\\n'.join([' & '.join(row) for row in rows])\n",
+    "print(txt)\n",
+    "with open('tables/hist-sym.tex', 'w') as f:\n",
+    "    f.write(txt)"
    ]
   },
   {
@@ -401,11 +419,19 @@
     "from scipy.stats import norm\n",
     "from collections import defaultdict\n",
     "results = {}\n",
-    "def fmt_result(r):\n",
+    "def fmt_result(r, bold=False):\n",
+    "    if bold:\n",
+    "        start = r'$\\mathbf{'\n",
+    "        end = r'}$'\n",
+    "    else:\n",
+    "        start = r'$'\n",
+    "        end = r'$'\n",
     "    if r == -np.inf:\n",
     "        return r'$\\approx-\\infty$'\n",
+    "    elif r < -100:\n",
+    "        return start + str(int(r)) + end\n",
     "    else:\n",
-    "        return r'{:.3g}'.format(r)\n",
+    "        return start + r'{:.3g}'.format(r) + end\n",
     "category_map = {k: 'chemistry' for k in chemistry_keys}\n",
     "category_map.update({k: 'particle' for k in particle_keys})\n",
     "category_map.update({k: 'historical' for k in historical_keys})\n",
@@ -452,9 +478,9 @@
     "    results[n]['name'] = nice_names[n]\n",
     "    results[n]['count'] = len(values)\n",
     "    # print(norm.pdf(values, loc=muhat_birge, scale=sigmas*chat))\n",
-    "    results[n]['birge_loglike'] = np.sum(np.log(norm.pdf(values, loc=muhat_birge, scale=sigmas*chat)))\n",
-    "    results[n]['re_loglike'] = np.sum(np.log(norm.pdf(values, loc=muhat_re, scale=np.sqrt(sigmas**2+tau**2))))\n",
-    "    results[n]['fe_loglike'] = np.sum(np.log(norm.pdf(values, loc=muhat_birge, scale=sigmas)))\n",
+    "    results[n]['birge_loglike'] = np.sum(norm.logpdf(values, loc=muhat_birge, scale=sigmas*chat))\n",
+    "    results[n]['re_loglike'] = np.sum(norm.logpdf(values, loc=muhat_re, scale=np.sqrt(sigmas**2+tau**2)))\n",
+    "    results[n]['fe_loglike'] = np.sum(norm.logpdf(values, loc=muhat_birge, scale=sigmas))\n",
     "\n",
     "    category = category_map[n]\n",
     "    if category not in results:\n",
@@ -469,9 +495,18 @@
     "    for r in ['birge_loglike', 're_loglike', 'fe_loglike']:\n",
     "        results['total'][r] += results[n][r]\n",
     "\n",
+    "\n",
+    "\n",
     "for res in results.values():\n",
-    "    for r in ['birge_loglike', 're_loglike', 'fe_loglike']:\n",
-    "        res[r] = fmt_result(res[r])\n",
+    "    res['count'] = fmt_result(res['count'])\n",
+    "\n",
+    "    loglike_keys = ['birge_loglike', 're_loglike', 'fe_loglike']\n",
+    "    loglike_values = [res[k] for k in loglike_keys]\n",
+    "    largest_idx = np.argmax(loglike_values)\n",
+    "    if len(np.unique(loglike_values)) == 1:\n",
+    "        largest_idx = np.nan\n",
+    "    for i, r in enumerate(loglike_keys):\n",
+    "        res[r] = fmt_result(res[r], bold=(i==largest_idx))\n",
     "\n",
     "results['total']['name'] = 'Total'\n",
     "results['historical']['name'] = 'Total (historical)'\n",
@@ -484,7 +519,125 @@
     "row_order = key_order + ['historical','chemistry', 'particle', 'total']\n",
     "results_df = results_df.loc[row_order]\n",
     "\n",
-    "print(results_df.to_latex(index=False))"
+    "# use np to save latex table with & separator\n",
+    "rows = results_df.values.tolist()\n",
+    "hline_idxs = [2, 2+len(chemistry_keys), 2+len(chemistry_keys)+len(particle_keys), -4, -1]\n",
+    "for i in hline_idxs:\n",
+    "    rows[i][0] = r'\\hline ' + rows[i][0]\n",
+    "txt = ' \\\\\\\\\\n'.join([' & '.join(row) for row in rows])\n",
+    "print(txt)\n",
+    "with open('tables/hist-syst.tex', 'w') as f:\n",
+    "    f.write(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.array(datasets['agi'].value)\n",
+    "sigma = np.array(datasets['agi'].uncertainty)\n",
+    "\n",
+    "import pymc as pm\n",
+    "print(y)\n",
+    "n = len(y)\n",
+    "width = np.max(y) - np.min(y)\n",
+    "\n",
+    "with pm.Model() as model:\n",
+    "    theta = pm.Normal('theta', np.mean(y), np.mean(y))\n",
+    "    # scaler_rate = pm.Exponential('scaler_rate', 0.2)\n",
+    "    # scalers = pm.Exponential('scalers', scaler_rate, shape=n)+1\n",
+    "    # y_pred = pm.Normal('y_pred', theta, sigma*scalers, observed=y)\n",
+    "\n",
+    "    # adder_rate = pm.Exponential('adder_rate', 10/width)\n",
+    "    adders = pm.Exponential('adders', 5/width, shape=n)\n",
+    "    y_pred = pm.Normal('y_pred', theta, np.sqrt(sigma**2+adders**2), observed=y)\n",
+    "\n",
+    "    trace = pm.sample(draws=1000, tune=1000, chains=4, target_accept=0.99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.plot_trace(trace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(n):\n",
+    "    plt.hist(trace.posterior['scalers'].values[:,:,i].flatten()+1, bins=100, histtype='step')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace.posterior['scalers'].values.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(trace.posterior['theta'].values.flatten(), bins=100)\n",
+    "qs = np.quantile(trace.posterior['theta'].values.flatten(), [0.16, 0.84])\n",
+    "plt.axvline(qs[0], color='red', linestyle='--', linewidth=1)\n",
+    "plt.axvline(qs[1], color='red', linestyle='--', linewidth=1)\n",
+    "ymax = plt.ylim()[1]\n",
+    "if 'scalers' in trace.posterior:\n",
+    "    scaler_qs = np.quantile(trace.posterior['scalers'].values, [0.25, 0.5, 0.75], axis=(0,1))+1\n",
+    "    print(scaler_qs.shape)\n",
+    "    for i in range(3):\n",
+    "        plt.errorbar(y, np.linspace(ymax/len(y), ymax, len(y)), xerr=sigma*scaler_qs[i], fmt='.', markersize=2, linewidth=1, color='black', capsize=2)\n",
+    "if 'adders' in trace.posterior:\n",
+    "    adder_qs = np.quantile(trace.posterior['adders'].values, [0.25, 0.5, 0.75], axis=(0,1))\n",
+    "    print(adder_qs.shape)\n",
+    "    for i in range(3):\n",
+    "        plt.errorbar(y, np.linspace(ymax/len(y), ymax, len(y)), xerr=sigma+adder_qs[i], fmt='.', markersize=2, linewidth=1, color='black', capsize=2)\n",
+    "# sigmas_adjust = sigma * np.median(trace.posterior['scalers'].values, axis=(0,1))\n",
+    "\n",
+    "plt.errorbar(y, np.linspace(ymax/len(y), ymax, len(y)), xerr=sigma, fmt='.', markersize=2, linewidth=2, color='black')\n",
+    "\n",
+    "# plt.ylim(0, ymax)\n",
+    "# plt.xlim(qs[0], qs[1])\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
