--- a/pdg2025.ipynb
+++ b/pdg2025.ipynb
@@ -247,8 +247,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(birge_logprobs - re_logprobs, bins=100, color='grey')\n",
-    "plt.show()"
+    "# plt.hist(birge_logprobs - re_logprobs, bins=100, color='grey')\n",
+    "# plt.show()"
    ]
   },
   {
@@ -279,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs[np.argmax(birge_logprobs - re_logprobs)]"
+    "# dfs[np.argmax(birge_logprobs - re_logprobs)]"
    ]
   },
   {
