--- a/references.bib
+++ b/references.bib
@@ -33,6 +33,80 @@
   doi={10.1016/j.jspi.2009.09.017}
 }
 
+@article{baker2013meta,
+  title={Meta-analysis inside and outside particle physics: two traditions that should converge?},
+  author={Baker, Rose D and Jackson, Dan},
+  journal={Research Synthesis Methods},
+  volume={4},
+  number={2},
+  pages={109--124},
+  year={2013},
+  publisher={Wiley Online Library},
+  doi={10.1002/jrsm.1065}
+}
+
+@article{pdg2011topquark,
+title = {Review of Particle Physics},
+author = {{Particle Data Group} and K. Nakamura and K. Hagiwara and K. Hikasa and H. Murayama and Y. Nir},
+year = {2010},
+month = {jul},
+doi = {10.1088/0954-3899/37/7A/075021},
+volume = {37},
+journal = {Journal Of Physics G-Nuclear And Particle Physics},
+issn = {0954-3899},
+publisher = {Institute of Physics Publishing},
+number = {7A},
+url={https://pdg.lbl.gov/2011/listings/rpp2011-list-t-quark.pdf}
+}
+
+@article{coulon2021digitalization,
+  title={Digitalization of the reporting of key comparisons for radionuclide metrology},
+  author={Coulon, Romain and Courte, Sammy and Judge, Steven and Michotte, Carine and Nonis, Manuel},
+  journal={Measurement Science and Technology},
+  volume={33},
+  number={2},
+  pages={024003},
+  year={2021},
+  publisher={IOP Publishing},
+  doi={10.1088/1361-6501/ac3fc4}
+}
+
+@article{thompson1999explaining,
+  title={Explaining heterogeneity in meta-analysis: a comparison of methods},
+  author={Thompson, Simon G and Sharp, Stephen J},
+  journal={Statistics in medicine},
+  volume={18},
+  number={20},
+  pages={2693--2708},
+  year={1999},
+  publisher={Wiley Online Library},
+  doi={10.1002/(SICI)1097-0258(19991030)18:20<2693::AID-SIM235>3.0.CO;2-V}
+}
+
+@article{stanley2015neither,
+  title={Neither fixed nor random: weighted least squares meta-analysis},
+  author={Stanley, Tom D and Doucouliagos, Hristos},
+  journal={Statistics in medicine},
+  volume={34},
+  number={13},
+  pages={2116--2127},
+  year={2015},
+  publisher={Wiley Online Library},
+  doi={10.1002/sim.6481}
+}
+
+@article{klein2018many,
+  title={Many Labs 2: Investigating variation in replicability across samples and settings},
+  author={Klein, Richard A and Vianello, Michelangelo and Hasselman, Fred and Adams, Byron G and Adams Jr, Reginald B and Alper, Sinan and Aveyard, Mark and Axt, Jordan R and Babalola, Mayowa T and Bahn{\'\i}k, {\v{S}}t{\v{e}}p{\'a}n and others},
+  journal={Advances in Methods and Practices in Psychological Science},
+  volume={1},
+  number={4},
+  pages={443--490},
+  year={2018},
+  publisher={Sage Publications Sage CA: Los Angeles, CA},
+  doi={10.1177/2515245918810225}
+}
+
 @article{sutton2001bayesian,
   title={Bayesian methods in meta-analysis and evidence synthesis},
   author={Sutton, Alex J and Abrams, Keith R},
@@ -220,10 +294,41 @@
   journal={Physics Letters B},
   volume={33},
   number={1},
-  pages={i--127},
   year={1970},
   publisher={Elsevier},
   doi={{10.1016/0370-2693(70)90211-X}}
+}
+
+@article{forbes2016hierarchical,
+  title={A hierarchical model for the analysis of inter-laboratory comparison data},
+  author={Forbes, Alistair B},
+  journal={Metrologia},
+  volume={53},
+  number={6},
+  pages={1295},
+  year={2016},
+  publisher={IOP Publishing},
+  doi={10.1088/0026-1394/53/6/1295}
+}
+
+@article{merkatas2019shades,
+  title={Shades of dark uncertainty and consensus value for the Newtonian constant of gravitation},
+  author={Merkatas, Christos and Toman, Blaza and Possolo, Antonio and Schlamminger, Stephan},
+  journal={Metrologia},
+  volume={56},
+  number={5},
+  year={2019},
+  publisher={IOP Publishing},
+  doi={10.1088/1681-7575/ab3365}
+}
+
+@article{gelman2006prior,
+  title={Prior distributions for variance parameters in hierarchical models (comment on article by Browne and Draper)},
+  author={Gelman, Andrew},
+  year={2006},
+  journal={Bayesian Analysis},
+  doi={10.1214/06-BA117A},
+  pages={515--534}
 }
 
 
