more writing and results

--- a/noground.ipynb
+++ b/noground.ipynb
@@ -116,15 +116,17 @@
    "source": [
     "def dfs_from_folder(folder):\n",
     "    path_list = os.listdir(folder)\n",
-    "    dfs = [pd.read_csv(f'{folder}/{path}', comment='#') for path in path_list if path.endswith('.csv')]\n",
-    "    return dfs\n",
-    "manylabs2_dfs = dfs_from_folder('data/psymetadata')\n",
-    "bipm_radionuclide_dfs = dfs_from_folder('data/bipm-radionuclide')\n",
-    "baker_medical_dfs = dfs_from_folder('data/baker-medical/clean')\n",
+    "    files = [path for path in path_list if path.endswith('.csv')]\n",
+    "    files.sort()\n",
+    "    dfs = [pd.read_csv(f'{folder}/{file}', comment='#') for file in files]\n",
+    "    return dfs, files\n",
+    "manylabs2_dfs, manylabs2_files = dfs_from_folder('data/psymetadata')\n",
+    "bipm_radionuclide_dfs, bipm_radionuclide_files = dfs_from_folder('data/bipm-radionuclide')\n",
+    "baker_medical_dfs, baker_medical_files = dfs_from_folder('data/baker-medical/clean')\n",
     "for df in baker_medical_dfs:\n",
     "    df['uncertainty'] = np.sqrt(df['sigma2'])\n",
-    "baker_pdg2011_both_dfs = dfs_from_folder('data/baker-pdg2011-both')\n",
-    "baker_pdg2011_stat_dfs = dfs_from_folder('data/baker-pdg2011-stat')\n",
+    "baker_pdg2011_both_dfs, baker_pdg2011_both_files = dfs_from_folder('data/baker-pdg2011-both')\n",
+    "baker_pdg2011_stat_dfs, baker_pdg2011_stat_files = dfs_from_folder('data/baker-pdg2011-stat')\n",
     "\n",
     "datasets = {\n",
     "    'pdg2025-stat': pdg2025_stat_dfs,\n",
@@ -134,6 +136,13 @@
     "    'bipm-radionuclide': bipm_radionuclide_dfs,\n",
     "    'manylabs2': manylabs2_dfs,\n",
     "    'baker-medical': baker_medical_dfs,\n",
+    "}\n",
+    "files = {\n",
+    "    'baker-pdg2011-stat': baker_pdg2011_stat_files,\n",
+    "    'baker-pdg2011-both': baker_pdg2011_both_files,\n",
+    "    'bipm-radionuclide': bipm_radionuclide_files,\n",
+    "    'manylabs2': manylabs2_files,\n",
+    "    'baker-medical': baker_medical_files,\n",
     "}\n",
     "nice_names = {\n",
     "    'pdg2025-stat': 'PDG 2025 (stat)',\n",
@@ -259,17 +268,26 @@
     "re_loglikes = defaultdict(list)\n",
     "fe_loglikes = defaultdict(list)\n",
     "ns = defaultdict(list)\n",
+    "exponent_loglikes = defaultdict(list)\n",
+    "exponent_grid = np.linspace(0, 1, 101, endpoint=True)\n",
+    "# print(exponent_grid)\n",
     "\n",
     "pdg2025bad = ['M047R7', 'M002R19', 'M049R52', 'M055R6', 'M053R02', 'M052R4', 'M056R4', 'M057R4', 'M070R24', 'M070R50', 'M070R60', 'M070R7', 'M070R82', 'M070R83', 'M070R84', 'M070R86', 'M070R87','M070R9', 'M070S6', 'M071R22', 'M071R28','M071S10', 'S040R11', 'S041B24', 'S041B41', 'S041C5', 'S041R3', 'S041R39', 'S041R90', 'S041S47', 'S041R65', 'S041S50', 'S041T03', 'S042B26', 'S042B27', 'S042B43', 'S042B47', 'S042B58', 'S042P59', 'S042R2', 'S042R20', 'S042R22', 'S042R23', 'S042R3', 'S042R47', 'S042R48', 'S042S24', 'S042S59', 'S049R21', 'S049S7', 'S049R24', 'S042S88', 'S086R3', 'S086R33', 'S086R32', 'S086R8', 'S086R34', 'S086R6']\n",
     "\n",
+    "names = defaultdict(list)\n",
     "\n",
     "for name, dfs in datasets.items():\n",
+    "    # if name not in ['baker-pdg2011-stat', 'baker-medical', 'baker-pdg2011-both']:\n",
+    "    #     continue\n",
     "    print(name)\n",
     "    for i, df in tqdm(enumerate(dfs), total=len(dfs)):\n",
     "        \n",
     "        if name in ['pdg2025-stat', 'pdg2025-both']:\n",
     "            if df['pdgid'].iloc[0] in pdg2025bad:\n",
     "                continue\n",
+    "            names[name].append(df['pdgid'].iloc[0])\n",
+    "        else:\n",
+    "            names[name].append(files[name][i])\n",
     "\n",
     "        values = np.array(df['value'])\n",
     "        sigmas = np.array(df['uncertainty'])\n",
@@ -281,23 +299,51 @@
     "        sigmas = sigmas / scaler\n",
     "\n",
     "        # sigmas = sigmas/np.mean(sigmas)\n",
-    "        _, muhat_birge, _, chat = birge(values, sigmas, coverage=0.6827)\n",
+    "        _, muhat_birge, _, chat = birge(values, sigmas, coverage=0.6827, mle=True)\n",
     "        brs[name].append(chat)\n",
     "        mean_sigma = np.mean(sigmas)\n",
     "\n",
     "        _, muhat_re, _, tau = random_effects_mle(values, sigmas, coverage=0.6827)\n",
     "        taus[name].append(np.mean(tau/sigmas))\n",
     "        I2s[name].append(I2(values, sigmas))\n",
+    "        # print(files[name][i], len(values), np.round(I2s[name][-1], 2))\n",
+    "        # if I2s[name][-1] <= 0:\n",
+    "        #     continue\n",
+    "        # if files[name][i] == 'RHO770.csv':\n",
+    "        #     continue\n",
     "\n",
-    "        for i in range(10):\n",
-    "            # generate values with same sigmas but no unaccounted for errors.\n",
-    "            # to be used as a control when analyzing the distribution of chat and tau\n",
-    "            values_control = np.random.normal(loc=0, scale=sigmas)\n",
-    "            _, _, _, chat_cont = birge(values_control, sigmas, coverage=0.6827)\n",
-    "            brs_cont[name].append(chat_cont)\n",
-    "            _, _, _, tau_cont = random_effects_mle(values_control, sigmas, coverage=0.6827)\n",
-    "            taus_cont[name].append(np.mean(tau_cont/sigmas))\n",
-    "            I2s_cont[name].append(I2(values_control, sigmas))\n",
+    "        tau_grid = np.concatenate((np.linspace(0,1.1,100)*np.std(values), np.logspace(-4,4,100)))\n",
+    "        \n",
+    "        # theta_grid = np.concatenate((np.linspace(muhat_birge, muhat_re, 100), np.linspace(np.min(values), np.max(values), 100)))\n",
+    "        exponent_loglike = np.zeros(len(exponent_grid))\n",
+    "        for i,exponent in enumerate(exponent_grid):\n",
+    "            # scale = np.sqrt(sigmas[:,np.newaxis,np.newaxis]**2 + ((tau_grid)**2) * (sigmas[:,np.newaxis,np.newaxis]**(2*exponent)))\n",
+    "            scale = np.sqrt(sigmas[:,np.newaxis]**2 + ((tau_grid)**2) * (sigmas[:,np.newaxis]**(2*exponent)))\n",
+    "            \n",
+    "            w = 1/scale**2\n",
+    "            assert w.shape == (len(values), len(tau_grid))\n",
+    "            # print(np.sum(w * values, axis=0).shape)\n",
+    "            theta_mle = np.sum(w * values[:,np.newaxis], axis=0) / np.sum(w, axis=0)\n",
+    "            assert theta_mle.shape == tau_grid.shape\n",
+    "\n",
+    "            # print(scale.shape)\n",
+    "            loglike = norm.logpdf(values[:,np.newaxis], loc=theta_mle, scale=scale)\n",
+    "            assert loglike.shape == (len(values), len(tau_grid))\n",
+    "            exponent_loglike[i] = np.max(np.sum(loglike, axis=0))\n",
+    "        exponent_loglikes[name].append(exponent_loglike)\n",
+    "\n",
+    "\n",
+    "        # for i in range(10):\n",
+    "        #     # generate values with same sigmas but no unaccounted for errors.\n",
+    "        #     # to be used as a control when analyzing the distribution of chat and tau\n",
+    "        #     values_control = np.random.normal(loc=0, scale=sigmas)\n",
+    "        #     _, _, _, chat_cont = birge(values_control, sigmas, coverage=0.6827)\n",
+    "        #     brs_cont[name].append(chat_cont)\n",
+    "        #     _, _, _, tau_cont = random_effects_mle(values_control, sigmas, coverage=0.6827)\n",
+    "        #     taus_cont[name].append(np.mean(tau_cont/sigmas))\n",
+    "        #     I2s_cont[name].append(I2(values_control, sigmas))\n",
+    "\n",
+    "\n",
     "\n",
     "        birge_loglikes[name].append(np.sum(norm.logpdf(values, loc=muhat_birge, scale=sigmas*chat)))\n",
     "        if any(np.array(birge_loglikes[name])==-np.inf):\n",
@@ -313,6 +359,198 @@
     "    fe_loglikes[name] = np.array(fe_loglikes[name])\n",
     "    ns[name] = np.array(ns[name])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print([(k, np.sum(n)) for k, n in ns.items()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name in exponent_loglikes.keys():\n",
+    "    assert len(exponent_loglikes[name]) == len(birge_loglikes[name])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# _, theta_mle, _, tau_mle = random_effects_mle(values, sigmas, coverage=0.6827)\n",
+    "# theta_mle, tau_mle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# theta_idx, tau_idx = np.unravel_index(np.argmax(loglike), loglike.shape)\n",
+    "# theta_grid[theta_idx], tau_grid[tau_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(np.sum(norm.logpdf(values, loc=theta_mle, scale=np.sqrt(sigmas**2+tau_mle**2))))\n",
+    "# print(np.sum(norm.logpdf(values, loc=theta_grid[theta_idx], scale=np.sqrt(sigmas**2+tau_grid[tau_idx]**2))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import chi2\n",
+    "\n",
+    "best_exponents = {}\n",
+    "exponent_cis = {}\n",
+    "for name, exponent_loglike in exponent_loglikes.items():\n",
+    "    exponent_loglike = np.sum(exponent_loglike, axis=0)\n",
+    "    best_exponents[name] = exponent_grid[np.argmax(exponent_loglike)]\n",
+    "    logratio = 2 * (np.max(exponent_loglike) - exponent_loglike)\n",
+    "    within = logratio < chi2.ppf(0.95, df=1)\n",
+    "    idx_l = np.argmax(within)\n",
+    "    idx_u = -np.argmax(within[::-1]) - 1\n",
+    "    low = exponent_grid[idx_l]\n",
+    "    high = exponent_grid[idx_u]\n",
+    "    exponent_cis[name] = [low, high]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exponent_cis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_exponents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = []\n",
+    "for name in best_exponents.keys():\n",
+    "    rows.append([r'\\texttt{' + name + r'}', f'${best_exponents[name]}$', f'$[{exponent_cis[name][0]}, {exponent_cis[name][1]:.2f}]$'])\n",
+    "    \n",
+    "# use np to save latex table with & separator\n",
+    "txt = ' \\\\\\\\\\n'.join([' & '.join(row) for row in rows])\n",
+    "print(txt)\n",
+    "with open('tables/noground-bakermodel.tex', 'w') as f:\n",
+    "    f.write(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.plot(exponent_grid, exponent_loglikes['baker-pdg2011-both'][4])\n",
+    "# for exponent_loglike in exponent_loglikes['baker-pdg2011-stat']:\n",
+    "    # plt.plot(exponent_grid, (exponent_loglike - np.max(exponent_loglike))/(np.max(exponent_loglike)-np.min(exponent_loglike)))\n",
+    "which = 'baker-pdg2011-stat'\n",
+    "for name, exponent_loglike in exponent_loglikes.items():\n",
+    "    exponent_loglike = np.sum(np.array(exponent_loglike), axis=0)\n",
+    "    plt.plot(exponent_grid, exponent_loglike-np.max(exponent_loglike), label=name)\n",
+    "    # print(len(exponent_loglike))\n",
+    "    # plt.axvline(exponent_grid[np.argmax(exponent_loglike)], color='black', linestyle='--')\n",
+    "plt.ylim(-60, 5)\n",
+    "plt.legend(frameon=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(exponent_grid, np.sum(np.array(exponent_loglikes['pdg2025-stat']), axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(re_loglikes['pdg2025-both'], np.array(exponent_loglikes['pdg2025-both'])[:,0], s=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "which = 'pdg2025-both'\n",
+    "diffs = np.array(exponent_loglikes[which])[:,0]-re_loglikes[which]\n",
+    "print(np.sum(diffs))\n",
+    "bad_idx = np.argmax(diffs)\n",
+    "\n",
+    "name = names[which][bad_idx]\n",
+    "print(name)\n",
+    "for df in datasets[which]:\n",
+    "    if df['pdgid'].iloc[0] == name:\n",
+    "        break\n",
+    "\n",
+    "values = np.array(df['value'])\n",
+    "sigmas = np.array(df['uncertainty'])\n",
+    "print(values, sigmas)\n",
+    "_, theta_mle, _, tau_mle = random_effects_mle(values, sigmas, coverage=0.6827)\n",
+    "print(theta_mle, tau_mle)\n",
+    "tau_grid = np.concatenate((np.logspace(-4,4,200)*max(sigmas), np.logspace(-4,4,200)))\n",
+    "theta_grid = np.concatenate((np.linspace(muhat_birge, muhat_re, 100), np.linspace(np.min(values), np.max(values), 100)))\n",
+    "scale = np.sqrt(sigmas[:,np.newaxis,np.newaxis]**2 + (tau_grid)**2)\n",
+    "loglike = np.sum(norm.logpdf(values[:,np.newaxis,np.newaxis], loc=theta_grid[:,np.newaxis], scale=scale), axis=0)\n",
+    "\n",
+    "theta_idx, tau_idx = np.unravel_index(np.argmax(loglike), loglike.shape)\n",
+    "print(theta_grid[theta_idx], tau_grid[tau_idx])\n",
+    "\n",
+    "print(np.sum(norm.logpdf(values, loc=theta_mle, scale=np.sqrt(sigmas**2+tau_mle**2))))\n",
+    "print(np.sum(norm.logpdf(values, loc=theta_grid[theta_idx], scale=np.sqrt(sigmas**2+tau_grid[tau_idx]**2))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
