--- a/references.bib
+++ b/references.bib
@@ -45,6 +45,87 @@
   doi={10.1002/jrsm.1065}
 }
 
+@article{hedges1987hard,
+  title={How hard is hard science, how soft is soft science? The empirical cumulativeness of research.},
+  author={Hedges, Larry V},
+  journal={American Psychologist},
+  volume={42},
+  number={5},
+  pages={443},
+  year={1987},
+  publisher={American Psychological Association},
+  doi={10.1037/0003-066X.42.5.443}
+}
+
+@article{taylor1969determination,
+  title={Determination of e h, using macroscopic quantum phase coherence in superconductors: Implications for quantum electrodynamics and the fundamental physical constants},
+  author={Taylor, BN and Parker, WH and Langenberg, DN},
+  journal={Reviews of Modern Physics},
+  volume={41},
+  number={3},
+  pages={375},
+  year={1969},
+  publisher={APS}
+}
+
+@article{kacker2002combined,
+  title={Combined result and associated uncertainty from interlaboratory evaluations based on the ISO Guide},
+  author={Kacker, R and Datla, R and Parr, A},
+  journal={Metrologia},
+  volume={39},
+  number={3},
+  pages={279},
+  year={2002},
+  publisher={IOP Publishing}
+}
+
+@article{hisakado2006correlated,
+  title={Correlated binomial models and correlation structures},
+  author={Hisakado, Masato and Kitsukawa, Kenji and Mori, Shintaro},
+  journal={Journal of Physics A: Mathematical and General},
+  volume={39},
+  number={50},
+  pages={15365},
+  year={2006},
+  publisher={IOP Publishing},
+  doi={10.1088/0305-4470/39/50/005}
+}
+
+@article{cochran1937problems,
+  title={Problems arising in the analysis of a series of similar experiments},
+  author={Cochran, William G},
+  journal={Supplement to the Journal of the Royal Statistical Society},
+  volume={4},
+  number={1},
+  pages={102--118},
+  year={1937},
+  publisher = {Wiley, Royal Statistical Society},
+  doi={10.2307/2984123}
+}
+
+@article{dersimonian2015meta,
+  title={Meta-analysis in clinical trials revisited},
+  author={DerSimonian, Rebecca and Laird, Nan},
+  journal={Contemporary clinical trials},
+  volume={45},
+  pages={139--145},
+  year={2015},
+  publisher={Elsevier},
+  doi={10.1016/j.cct.2015.09.002}
+}
+
+@article{cochran1954combination,
+  title={The combination of estimates from different experiments},
+  author={Cochran, William G},
+  journal={Biometrics},
+  volume={10},
+  number={1},
+  pages={101--129},
+  year={1954},
+  publisher={Wiley, International Biometric Society},
+  doi={10.2307/3001666}
+}
+
 @article{pdg2011topquark,
 title = {Review of Particle Physics},
 author = {{Particle Data Group} and K. Nakamura and K. Hagiwara and K. Hikasa and H. Murayama and Y. Nir},
@@ -57,6 +138,30 @@ issn = {0954-3899},
 publisher = {Institute of Physics Publishing},
 number = {7A},
 url={https://pdg.lbl.gov/2011/listings/rpp2011-list-t-quark.pdf}
+}
+
+@article{hardy1996likelihood,
+  title={A likelihood approach to meta-analysis with random effects},
+  author={Hardy, Rebecca J and Thompson, Simon G},
+  journal={Statistics in medicine},
+  volume={15},
+  number={6},
+  pages={619--629},
+  year={1996},
+  publisher={Wiley Online Library},
+  doi={10.1002/(SICI)1097-0258(19960330)15:6<619::AID-SIM188>3.0.CO;2-A}
+}
+
+@article{rao1981estimators,
+  title={Estimators for the one-way random effects model with unequal error variances},
+  author={Rao, Poduri SRS and Kaplan, Jack and Cochran, William G},
+  journal={Journal of the American Statistical Association},
+  volume={76},
+  number={373},
+  pages={89--97},
+  year={1981},
+  publisher={Taylor \& Francis},
+  doi={10.1080/01621459.1981.10477611}
 }
 
 @article{coulon2021digitalization,
